# XMLer

./: .gitignore  doesnotwork_setup.py  pyproject.toml  readme.md  setup.cfg
data/: bspCSV.csv  config.json
src/: __main__.py  helper.py
src/xmler/: __main__.py  cli.py  converter.py  utils.py
src/xmler/config/: __init__.py  conf.py
src/xmler/converter/: __init__.py  csv_to_sepa_xml.py
src/xmler/utility/: __init__.py  _util.py
tests/: conftest.py  test_converter.py
tests/converter/: test_csv_to_sepa_xml.py
tests/data/: bspCSV.csv  bspCSV_faulty.csv  bspCSV_only_credit.csv  bspCSV_only_debit.csv
tests/data/test_output/: bspCSV_gutschrift.xml  bspCSV_ueberweisung.xml
tests/utility/: test__util.py
