[tool.poetry]
name = "xmler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

include = ["README.md", "setup.cfg", "src/**/*.py"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
schwifty = "^2020.9.0"
schema = "^0.7.3"
sepaxml = "^2.3.0"
tqdm = "^4.50.1"
unidecode = "^1.1.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
flake8-commas = "^2.0.0"
flake8-bugbear = "^20.1.4"
flake8-comprehensions = "^3.2.3"
flake8-import-order = "^0.18.1"
flake8-pep3101 = "^1.3.0"
flake8-quotes = "^3.2.0"
pep8-naming = "^0.11.1"
mypy = "^0.782"
pydocstyle = "^5.0.2"
pytest = "^6.1.1"
pytest-cov = "^2.10.1"
pytest-datadir = "^1.3.1"
pytest-docstyle = "^2.0.1"
pytest-flake8 = "^1.0.6"
pytest-pythonpath = "^0.7.3"
pytest-randomly = "^3.4.1"
pytest-sugar = "^0.9.4"

[tool.poetry.scripts]
xmler = 'xmler.cli:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
